write README file

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               </label><br>
             </div>
             <div class="delivery">
-              <h3>Delivery or Pick-up?</h3>
+              <h3 id="delorpick">Delivery or Pick-up?</h3>
               <label class="checkbox-inline">
                 <input type="radio" name=delivery-check value="delivery" required> Delivery
               </label>
