--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Garbage Pizza</title>
+    <title>Pizza Order Form</title>
   </head>
   <body>
     <div class="jumbotron">
